--- a/oshealthrec-website/public/css/oshealthrec.css
+++ b/oshealthrec-website/public/css/oshealthrec.css
@@ -70,6 +70,10 @@ th {
     background-color: #0090d3;
 }
 
+button.icon-inline{
+    color: grey;
+}
+
 button.icon-inline:hover{
     color: #0090d3;
 }
