Primary Button Farbe angepasst

--- a/oshealthrec-website/public/css/oshealthrec.css
+++ b/oshealthrec-website/public/css/oshealthrec.css
@@ -58,6 +58,9 @@ th {
     color: #0090d3;
 }
 
+.btn-primary {
+    background-color: #0090d3;;
+}
 .btn-outline-primary {
     border-color: #0090d3;
     color: #0090d3;
